--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     command: ['tail', '-f', '/dev/null']
     volumes:
       - ./servers/server01:/etc/consul.d
+    ports:
+      - "8500:8500"
       
   consulserver02:
     image: consul:1.10
@@ -15,7 +17,7 @@ services:
     hostname: consulserver02
     command: ['tail', '-f', '/dev/null']
     volumes:
-      - ./servers/server02:/etc/consul.d
+      - ./servers/server02:/etc/consul.d    
 
   consulserver03:
     image: consul:1.10
